working on final changes for opcua

--- a/logstash/pipelines/zeek/12_zeek_mutate.conf
+++ b/logstash/pipelines/zeek/12_zeek_mutate.conf
@@ -1306,6 +1306,7 @@ filter {
       rename => { "[zeek][opcua_binary_browse][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
       rename => { "[zeek][opcua_binary_browse_result][browse_reference_link_id]" => "[zeek][opcua_binary_browse_response_references][browse_reference_link_id]" }
       rename => { "[zeek][opcua_binary_browse_result][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
+      rename => { "[zeek][opcua_binary_close_session][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
       rename => { "[zeek][opcua_binary_create_monitored_items][create_item_link_id]" => "[zeek][opcua_binary_create_monitored_items_create_item][create_item_link_id]" }
       rename => { "[zeek][opcua_binary_create_monitored_items][create_monitored_items_diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
       rename => { "[zeek][opcua_binary_create_monitored_items][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
@@ -1328,22 +1329,39 @@ filter {
       rename => { "[zeek][opcua_binary_read][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
       rename => { "[zeek][opcua_binary_read][read_results_link_id]" => "[zeek][opcua_binary_read_results][results_link_id]" }
       rename => { "[zeek][opcua_binary_read_results][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
-      rename => { "[zeek][opcua_binary_variant_metadata][variant_data_link_id]" => "[zeek][opcua_binary][variant_source_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_metadata][variant_source_data_link_id]" => "[zeek][opcua_binary][variant_source_link_id]" }
       rename => { "[zeek][opcua_binary_read_results][read_results_variant_metadata_link_id]" => "[zeek][opcua_binary][variant_source_link_id]" }
       rename => { "[zeek][opcua_binary_variant_data][variant_metadata_data_link_id]" => "[zeek][opcua_binary][variant_source_link_id]" }
       rename => { "[zeek][opcua_binary_variant_data_value][variant_metadata_link_id]" => "[zeek][opcua_binary][variant_source_link_id]" }
       rename => { "[zeek][opcua_binary_event_filter_literal_operand][literal_operand_variant_link]" => "[zeek][opcua_binary][variant_source_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_metadata][variant_data_link_id]" => "[zeek][opcua_binary_variant_data][variant_data_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_metadata][variant_data_array_multi_dim_link_id]" => "[zeek][opcua_binary_variant_array_dims][array_dim_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_data][variant_data_status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
       rename => { "[zeek][opcua_binary_variant_data][variant_data_diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
       rename => { "[zeek][opcua_binary_variant_data][variant_data_ext_obj_link_id]" => "[zeek][opcua_binary_variant_extension_object][ext_obj_link_id]" }
-      rename => { "[zeek][opcua_binary_variant_data][variant_data_status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
       rename => { "[zeek][opcua_binary_variant_data][variant_data_value_link_id]" => "[zeek][opcua_binary_variant_data_value][variant_data_value_source_link]" }
       rename => { "[zeek][opcua_binary_variant_data_value][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
-      rename => { "[zeek][opcua_binary_variant_metadata][variant_data_array_multi_dim_link_id]" => "[zeek][opcua_binary_variant_array_dims][array_dim_link_id]" }
-      rename => { "[zeek][opcua_binary_variant_metadata][variant_data_link_id]" => "[zeek][opcua_binary_variant_data][variant_data_link_id]" }
-      rename => { "[zeek][opcua_binary_aggregate_filter][monitored_parameters_link_id]" => "[zeek][opcua_binary][filter_source_link_id]" }
       rename => { "[zeek][opcua_binary_create_monitored_items_create_item][filter_info_details_link_id]" => "[zeek][opcua_binary][filter_source_link_id]" }
       rename => { "[zeek][opcua_binary_data_change_filter][monitored_parameters_link_id]" => "[zeek][opcua_binary][filter_source_link_id]" }
+      rename => { "[zeek][opcua_binary_aggregate_filter][monitored_parameters_link_id]" => "[zeek][opcua_binary][filter_source_link_id]" }
       rename => { "[zeek][opcua_binary_event_filter][monitored_parameters_link_id]" => "[zeek][opcua_binary][filter_source_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter][select_clause_link_id]" => "[zeek][opcua_binary_event_filter_select_clause][select_clause_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter][where_clause_content_filter_link_id]" => "[zeek][opcua_binary_event_filter_where_clause][where_clause_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_where_clause][content_filter_element_link_id]" => "[zeek][opcua_binary_event_filter_where_clause_elements][content_filter_element_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_where_clause][content_filter_status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_where_clause][content_filter_diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_where_clause_elements][content_filter_filter_operand_link_id]" => "[zeek][opcua_binary][operand_source_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_where_clause_elements][content_filter_operand_status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_where_clause_elements][content_filter_operand_diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_select_clause][simple_attribute_operand_browse_path_link_id]" => "[zeek][opcua_binary_event_filter_simple_attribute_operand_browse_paths][simple_attribute_operand_browse_path_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_select_clause][select_clause_status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_select_clause][select_clause_diagnostic_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_simple_attribute_operand][content_filter_filter_operand_link_id]" => "[zeek][opcua_binary][operand_source_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_simple_attribute_operand][simple_attribute_operand_browse_path_link_id]" => "[zeek][opcua_binary_event_filter_simple_attribute_operand_browse_paths][simple_attribute_operand_browse_path_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_attribute_operand][content_filter_filter_operand_link_id]" => "[zeek][opcua_binary][operand_source_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_attribute_operand][browse_path_element_link_id]" => "[zeek][opcua_binary_event_filter_attribute_operand_browse_paths][browse_path_element_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_element_operand][content_filter_filter_operand_link_id]" => "[zeek][opcua_binary][operand_source_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_literal_operand][content_filter_filter_operand_link_id]" => "[zeek][opcua_binary][operand_source_link_id]" }
     }
 
     # count the number of contributing "log types" after we've renamed stuff
