working on final changes for opcua

--- a/logstash/pipelines/zeek/13_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/13_zeek_normalize.conf
@@ -360,25 +360,59 @@ filter {
   if ([zeek][ospf][ospf_type])                   { mutate { id => "mutate_merge_normalize_zeek_ospf_ospf_type"
                                                             merge => { "[event][action]" => "[zeek][ospf][ospf_type]" } } }
 
-  if ([zeek][opcua_binary][msg_type] or [zeek][opcua_binary][identifier_str]) {
-    ruby {
-      # action = msg_type:identifier_str
-      id => "ruby_zeek_opcua_binary_generate_action"
-      code => "
-        actions = Array.new unless (actions = event.get('[event][action]'))
-        actions.append([event.get('[zeek][opcua_binary][msg_type]'),
-                        event.get('[zeek][opcua_binary][identifier_str]')].reject{ |e| e.nil? || e&.empty? }.join(':'))
-        event.set('[event][action]', actions)"
+  if ([event][dataset] =~ /^opcua_binary/) {
+    if ([zeek][opcua_binary][msg_type] or [zeek][opcua_binary][identifier_str]) {
+      ruby {
+        # action = msg_type:identifier_str
+        id => "ruby_zeek_opcua_binary_generate_action"
+        code => "
+          actions = Array.new unless (actions = event.get('[event][action]'))
+          actions.append([event.get('[zeek][opcua_binary][msg_type]'),
+                          event.get('[zeek][opcua_binary][identifier_str]')].reject{ |e| e.nil? || e&.empty? }.join(':'))
+          event.set('[event][action]', actions)"
+      }
     }
-  }
 
-  if ([zeek][opcua_binary_status_code_detail][source_str]) {
-                                                   mutate { id => "mutate_merge_normalize_zeek_opcua_binary_status_code_detail_source_str"
-                                                            merge => { "[event][action]" => "[zeek][opcua_binary_status_code_detail][source_str]" } } }
+    if ([zeek][opcua_binary_status_code_detail][source_str]) {
+                                                     mutate { id => "mutate_merge_normalize_zeek_opcua_binary_status_code_detail_source_str"
+                                                              merge => { "[event][action]" => "[zeek][opcua_binary_status_code_detail][source_str]" } } }
 
-  if ([zeek][opcua_binary_browse][browse_service_type]) {
-                                                   mutate { id => "mutate_merge_normalize_zeek_opcua_binary_browse_browse_service_type"
-                                                            merge => { "[event][action]" => "[zeek][opcua_binary_browse][browse_service_type]" } } }
+    if ([zeek][opcua_binary_browse][browse_service_type]) {
+                                                     mutate { id => "mutate_merge_normalize_zeek_opcua_binary_browse_browse_service_type"
+                                                              merge => { "[event][action]" => "[zeek][opcua_binary_browse][browse_service_type]" } } }
+
+    if (![event][action]) {
+      if ([event][dataset] =~ /^opcua_binary_activate_session/) {
+        mutate { id => "mutate_add_field_metadata_opcua_activate_session"
+                 add_field => { "[@metadata][opcua_action_from_dataset]" => "ActivateSession" } }
+      } else if ([event][dataset] =~ /^opcua_binary_browse/) {
+        mutate { id => "mutate_add_field_metadata_opcua_browse"
+                 add_field => { "[@metadata][opcua_action_from_dataset]" => "Browse" } }
+      } else if ([event][dataset] == "opcua_binary_close_session") {
+        mutate { id => "mutate_add_field_metadata_opcua_close_session"
+                 add_field => { "[@metadata][opcua_action_from_dataset]" => "CloseSession" } }
+      } else if ([event][dataset] == "opcua_binary_create_monitored_items") {
+        mutate { id => "mutate_add_field_metadata_opcua_create_monitored_items"
+                 add_field => { "[@metadata][opcua_action_from_dataset]" => "CreateMonitoredItems" } }
+      } else if ([event][dataset] == "opcua_binary_create_session") {
+        mutate { id => "mutate_add_field_metadata_opcua_create_session"
+                 add_field => { "[@metadata][opcua_action_from_dataset]" => "CreateSession" } }
+      } else if ([event][dataset] == "opcua_binary_create_subscription") {
+        mutate { id => "mutate_add_field_metadata_opcua_create_subscription"
+                 add_field => { "[@metadata][opcua_action_from_dataset]" => "CreateSubscription" } }
+      } else if ([event][dataset] == "opcua_binary_get_endpoints") {
+        mutate { id => "mutate_add_field_metadata_opcua_get_endpoints"
+                 add_field => { "[@metadata][opcua_action_from_dataset]" => "GetEndpoints" } }
+      } else if ([event][dataset] =~ /^opcua_binary_read/) {
+        mutate { id => "mutate_add_field_metadata_opcua_read"
+                 add_field => { "[@metadata][opcua_action_from_dataset]" => "Read" } }
+      }
+      if ([@metadata][opcua_action_from_dataset]) {
+        mutate { id => "mutate_merge_zeek_opcua_action_from_dataset"
+                 merge => { "[event][action]" => "[@metadata][opcua_action_from_dataset]" } }
+      }
+    }
+  } # opcua_binary
 
   if ([zeek][profinet][operation_type])          { mutate { id => "mutate_merge_normalize_zeek_profinet_operation_type"
                                                            merge => { "[event][action]" => "[zeek][profinet][operation_type]" } } }
