--- a/sensor-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-15/16346759461.desktop
+++ b/sensor-iso/config/includes.chroot/etc/skel/.config/xfce4/panel/launcher-15/16346759461.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=Tilix
 Comment=A tiling terminal for Gnome
 Keywords=shell;prompt;command;commandline;cmd;
-Exec=tilix
+Exec=tilix --working-directory=/opt/sensor/sensor_ctl
 Terminal=false
 Type=Application
 StartupNotify=true
@@ -15,11 +15,11 @@ X-XFCE-Source=file:///usr/share/applications/com.gexperts.Tilix.desktop
 
 [Desktop Action new-window]
 Name=New Window
-Exec=tilix --action=app-new-window
+Exec=tilix --action=app-new-window --working-directory=/opt/sensor/sensor_ctl
 
 [Desktop Action new-session]
 Name=New Session
-Exec=tilix --action=app-new-session
+Exec=tilix --action=app-new-session --working-directory=/opt/sensor/sensor_ctl
 
 [Desktop Action preferences]
 Name=Preferences
