(hopefully) fix idaholab/Malcolm#151, last few seconds' Zeek logs prior to log rotation may be lost

--- a/logstash/pipelines/zeek/10_zeek_prep.conf
+++ b/logstash/pipelines/zeek/10_zeek_prep.conf
@@ -6,14 +6,18 @@ filter {
     drop { id => "drop_zeek_invalid_logs" }
   }
 
-  # tags may have been specified, like: conn(tagA,tagB,tagC).log, extract the log type (conn) and the tags (tagA,tagB,tagC)
-  # also normalize log types with - in their names to _ (e.g., opcua-binary -> opcua_binary)
+  # - Tags may have been specified, like: conn(tagA,tagB,tagC).log, extract the log type (conn) and the tags (tagA,tagB,tagC).
+  # - Normalize log types with - in their names to _ (e.g., opcua-binary -> opcua_binary).
+  # - Zeek log files might be caught by filebeat right in the middle of being renamed/moved as
+  #   part of log rotation (ie., renamed from conn.log to conn.2020-01-16-14-00-00.log or
+  #   conn.2020_01_16_14_00_00.log). We don't care about that, ignore the date part and just process
+  #   the log source as we normally would.
   ruby {
-    id => "ruby_zeek_source_extract"
-                                                                  #↓Type     ↓Tags
+    id => "ruby_zeek_log_source_extract"
+    #                                                                       ↓Type     ↓Tags   ↓Rotate Timestamp (discard)                                        ↓.log (discard)
     code => "
-      if fileParts = event.get('[log][file][path]').split('/').last.match(/^(.*?)(?:\((.*)\))?\.log/i) then
-        logType, tags = fileParts.captures
+      if fileParts = event.get('[log][file][path]').split('/').last.match(/^(.*?)(?:\((.*)\))?(?:\.\d{4}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2})?\.log/i) then
+        logType, tags  = fileParts.captures
         event.set('[log_source]', logType.gsub('-', '_')) unless logType.nil?
         event.set('[@metadata][zeek_log_tags]', tags) unless tags.nil?
       end"
