--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: A powerful, easily deployable network traffic analysis tool suite
 logo: docs/images/logo/Malcolm_outline_banner_dark.png
 remote_theme: pages-themes/minimal@v0.2.0
 external_download_url: https://malcolm.fyi/docs/download.html
-youtube_url: https://www.youtube.com/c/MalcolmNetworkTrafficAnalysisToolSuite
+youtube_url: https://www.youtube.com/@MalcolmNetworkTrafficAnalysis
 mastodon:
   id: malcolm@malcolm.fyi
   url: https://infosec.exchange/@mmguero
