Initial minor tweaks to things to allow the new configmap docker entrypoint to work its magical magic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1116,7 +1116,7 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - nginx-log-path:/var/log/nginx:rw
       - ./nginx/nginx_ldap.conf:/etc/nginx/nginx_ldap.conf:ro
-      - ./nginx/htpasswd:/etc/nginx/.htpasswd:ro
+      - ./nginx/htpasswd:/etc/nginx/htpasswd:ro
       - ./nginx/certs:/etc/nginx/certs:ro
       - ./nginx/certs/dhparam.pem:/etc/nginx/dhparam/dhparam.pem:ro
     healthcheck:
