--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,61 +29,61 @@ http {
   # if LDAP authentication is enabled, this will configure the ldap_server section
   include /etc/nginx/nginx_ldap_rt.conf;
 
-  upstream arkime {
-    server arkime:8005;
-  }
-
-  upstream api {
-    server api:5000;
-  }
-
-  upstream upload {
-    server upload:80;
-  }
-
-  upstream htadmin {
-    server htadmin:80;
-  }
-
-  upstream dashboards {
-    server dashboards:5601;
-  }
-
-  upstream dashboards-maps {
-    server dashboards-helper:28991;
-  }
-
-  upstream opensearch {
-    server opensearch:9200;
-  }
-
-  upstream logstash-stats {
-    server logstash:9600;
-  }
-
-  upstream name-map-ui {
-    server name-map-ui:8080;
-  }
-
-  upstream netbox {
-    server netbox:8080;
-  }
-
-  upstream extracted-file-http-server {
-    server file-monitor:8440;
-  }
+##  upstream arkime {
+##    server arkime:8005;
+##  }
+##
+##  upstream api {
+##    server api:5000;
+##  }
+##
+##  upstream upload {
+##    server upload:80;
+##  }
+##
+##  upstream htadmin {
+##    server htadmin:80;
+##  }
+##
+##  upstream dashboards {
+##    server dashboards:5601;
+##  }
+##
+##  upstream dashboards-maps {
+##    server dashboards-helper:28991;
+##  }
+##
+##  upstream opensearch {
+##    server opensearch:9200;
+##  }
+##
+##  upstream logstash-stats {
+##    server logstash:9600;
+##  }
+##
+##  upstream name-map-ui {
+##    server name-map-ui:8080;
+##  }
+##
+##  upstream netbox {
+##    server netbox:8080;
+##  }
+##
+##  upstream extracted-file-http-server {
+##    server file-monitor:8440;
+##  }
 
   # htadmin (htpasswd/user management)
-  server {
-    listen 488;
-    include /etc/nginx/nginx_ssl_config.conf;
-
-    location / {
-      proxy_pass http://htadmin;
-      proxy_redirect off;
-      proxy_set_header Host htadmin.malcolm.local;
-    }
-  }
+##  server {
+##    listen 488;
+##    include /etc/nginx/nginx_ssl_config.conf;
+##
+##    location / {
+##      proxy_pass http://htadmin;
+##      proxy_redirect off;
+##      proxy_set_header Host htadmin.malcolm.local;
+##    }
+##  }
 
   # Main web interface
   server {
@@ -99,222 +99,224 @@ http {
       try_files $uri $uri/index.html;
     }
 
-    # Malcolm file upload
-    location /upload {
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-      proxy_pass http://upload/;
-      proxy_redirect off;
-      proxy_set_header Host upload.malcolm.local;
-      proxy_request_buffering off;
-      proxy_buffering off;
-      client_max_body_size 50G;
-    }
-    location /server/php {
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-      proxy_pass http://upload/server/php/;
-      proxy_redirect off;
-      proxy_set_header Host upload.malcolm.local;
-      proxy_request_buffering off;
-      proxy_buffering off;
-      client_max_body_size 50G;
-    }
-
-    # Logstash statistics
-    location ~* ^/logstash\b(.*) {
-      proxy_pass http://logstash-stats/_node/stats$1;
-      proxy_redirect off;
-      proxy_set_header Host arkime.malcolm.local;
-    }
-
-    # Arkime -> Dashboards shortcut
-    location ~* ^/idark2dash(.*) {
-
-      set $filter_start_time now-1d;
-      if ($arg_start != '') {
-        set $filter_start_time \'$arg_start\';
-      }
-
-      set $filter_stop_time now;
-      if ($arg_stop != '') {
-        set $filter_stop_time \'$arg_stop\';
-      }
-
-      set $filter_field undefined;
-      if ($arg_field != '') {
-        set $filter_field $arg_field;
-      }
-
-      set $filter_value undefined;
-      if ($arg_value != '') {
-        set $filter_value $arg_value;
-      }
-
-      rewrite ^/idark2dash/(.*) /dashboards/app/discover#/?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'sessions2-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'sessions2-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
-      proxy_pass http://dashboards;
-      proxy_redirect off;
-      proxy_set_header Host dashboards.malcolm.local;
-    }
-
-    # Dashboards -> Arkime shortcut
-    location ~* /iddash2ark/(.*) {
-      rewrite ^.*/iddash2ark/(.*) /sessions?expression=($1) redirect;
-      proxy_pass https://arkime;
-      proxy_ssl_verify off;
-      proxy_redirect off;
-      proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $authenticated_user;
-      proxy_set_header Authorization "";
-    }
-
-    # Dashboards/Arkime -> extracted file download
-    location ~* /dl-extracted-files/(.*) {
-      rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
-      proxy_pass http://extracted-file-http-server;
-      proxy_redirect off;
-      proxy_set_header Host file-monitor.malcolm.local;
-    }
-
-    # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards's YML config file
-    location /dashboards {
-      proxy_pass http://dashboards;
-      proxy_redirect off;
-      proxy_set_header Host dashboards.malcolm.local;
-    }
-
-    # offline region maps for dashboards
-    location /world.geojson {
-      proxy_pass http://dashboards-maps;
-      proxy_redirect off;
-      proxy_set_header Host dashboards-helper.malcolm.local;
-    }
-
-    # name-map-ui (UI for mapping names to network hosts and subnets)
-    location /name-map-ui {
-      proxy_pass http://name-map-ui/;
-      proxy_redirect off;
-      proxy_set_header Host name-map-ui.malcolm.local;
-      proxy_cache off;
-    }
-
-    location ~* ^/extracted-files\b(.*) {
-      proxy_pass http://extracted-file-http-server$1;
-      proxy_redirect off;
-      proxy_set_header Host file-monitor.malcolm.local;
-    }
-
-    # netbox
-    location /netbox {
-      proxy_pass http://netbox;
-      proxy_redirect off;
-      proxy_set_header Host netbox.malcolm.local;
-      proxy_set_header X-Forwarded-Host $http_host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header X-Remote-Auth $authenticated_user;
-    }
-
-    # favicon, logos, banners, etc.
-    include /etc/nginx/nginx_image_aliases.conf;
-
-    # Fix cyberchef JS module(s)
-    # https://localhost/arkime/session/190924-KgO9H30qhdREw7ltsDXn1Rgp/modules/Regex.js
-    location ~* ^/arkime/session/.*/(modules/.*\.js) {
-      proxy_hide_header Content-Type;
-      proxy_set_header Content-Type "application/javascript";
-      add_header Content-Type "application/javascript";
-      default_type application/javascript;
-      add_header X-Content-Type-Options 'nosniff';
-      proxy_pass https://arkime/cyberchef/$1;
-      proxy_ssl_verify off;
-      proxy_redirect off;
-      proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $authenticated_user;
-      proxy_set_header Authorization "";
-    }
-
-    # Malcolm API
-    location /mapi {
-      proxy_pass http://api/;
-      proxy_redirect off;
-      proxy_set_header Host api.malcolm.local;
-    }
+##    # Malcolm file upload
+##    location /upload {
+##      proxy_http_version 1.1;
+##      proxy_set_header Connection "";
+##      proxy_pass http://upload/;
+##      proxy_redirect off;
+##      proxy_set_header Host upload.malcolm.local;
+##      proxy_request_buffering off;
+##      proxy_buffering off;
+##      client_max_body_size 50G;
+##    }
+##    location /server/php {
+##      proxy_http_version 1.1;
+##      proxy_set_header Connection "";
+##      proxy_pass http://upload/server/php/;
+##      proxy_redirect off;
+##      proxy_set_header Host upload.malcolm.local;
+##      proxy_request_buffering off;
+##      proxy_buffering off;
+##      client_max_body_size 50G;
+##    }
+##
+##    # Logstash statistics
+##    location ~* ^/logstash\b(.*) {
+##      proxy_pass http://logstash-stats/_node/stats$1;
+##      proxy_redirect off;
+##      proxy_set_header Host arkime.malcolm.local;
+##    }
+##
+##    # Arkime -> Dashboards shortcut
+##    location ~* ^/idark2dash(.*) {
+##
+##      set $filter_start_time now-1d;
+##      if ($arg_start != '') {
+##        set $filter_start_time \'$arg_start\';
+##      }
+##
+##      set $filter_stop_time now;
+##      if ($arg_stop != '') {
+##        set $filter_stop_time \'$arg_stop\';
+##      }
+##
+##      set $filter_field undefined;
+##      if ($arg_field != '') {
+##        set $filter_field $arg_field;
+##      }
+##
+##      set $filter_value undefined;
+##      if ($arg_value != '') {
+##        set $filter_value $arg_value;
+##      }
+##
+##      rewrite ^/idark2dash/(.*) /dashboards/app/discover#/?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'sessions2-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'sessions2-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
+##      proxy_pass http://dashboards;
+##      proxy_redirect off;
+##      proxy_set_header Host dashboards.malcolm.local;
+##    }
+##
+##    # Dashboards -> Arkime shortcut
+##    location ~* /iddash2ark/(.*) {
+##      rewrite ^.*/iddash2ark/(.*) /sessions?expression=($1) redirect;
+##      proxy_pass https://arkime;
+##      proxy_ssl_verify off;
+##      proxy_redirect off;
+##      proxy_set_header Host arkime.malcolm.local;
+##      proxy_set_header http_auth_http_user $authenticated_user;
+##      proxy_set_header Authorization "";
+##    }
+##
+##    # Dashboards/Arkime -> extracted file download
+##    location ~* /dl-extracted-files/(.*) {
+##      rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
+##      proxy_pass http://extracted-file-http-server;
+##      proxy_redirect off;
+##      proxy_set_header Host file-monitor.malcolm.local;
+##    }
+##
+##    # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards's YML config file
+##    location /dashboards {
+##      proxy_pass http://dashboards;
+##      proxy_redirect off;
+##      proxy_set_header Host dashboards.malcolm.local;
+##    }
+##
+##    # offline region maps for dashboards
+##    location /world.geojson {
+##      proxy_pass http://dashboards-maps;
+##      proxy_redirect off;
+##      proxy_set_header Host dashboards-helper.malcolm.local;
+##    }
+##
+##    # name-map-ui (UI for mapping names to network hosts and subnets)
+##    location /name-map-ui {
+##      proxy_pass http://name-map-ui/;
+##      proxy_redirect off;
+##      proxy_set_header Host name-map-ui.malcolm.local;
+##      proxy_cache off;
+##    }
+##
+##    location ~* ^/extracted-files\b(.*) {
+##      proxy_pass http://extracted-file-http-server$1;
+##      proxy_redirect off;
+##      proxy_set_header Host file-monitor.malcolm.local;
+##    }
+##
+##    # netbox
+##    location /netbox {
+##      proxy_pass http://netbox;
+##      proxy_redirect off;
+##      proxy_set_header Host netbox.malcolm.local;
+##      proxy_set_header X-Forwarded-Host $http_host;
+##      proxy_set_header X-Real-IP $remote_addr;
+##      proxy_set_header X-Forwarded-Proto $scheme;
+##      proxy_set_header X-Remote-Auth $authenticated_user;
+##    }
+##
+##    # favicon, logos, banners, etc.
+##    include /etc/nginx/nginx_image_aliases.conf;
+##
+##    # Fix cyberchef JS module(s)
+##    # https://localhost/arkime/session/190924-KgO9H30qhdREw7ltsDXn1Rgp/modules/Regex.js
+##    location ~* ^/arkime/session/.*/(modules/.*\.js) {
+##      proxy_hide_header Content-Type;
+##      proxy_set_header Content-Type "application/javascript";
+##      add_header Content-Type "application/javascript";
+##      default_type application/javascript;
+##      add_header X-Content-Type-Options 'nosniff';
+##      proxy_pass https://arkime/cyberchef/$1;
+##      proxy_ssl_verify off;
+##      proxy_redirect off;
+##      proxy_set_header Host arkime.malcolm.local;
+##      proxy_set_header http_auth_http_user $authenticated_user;
+##      proxy_set_header Authorization "";
+##    }
+##
+##    # Malcolm API
+##    location /mapi {
+##      proxy_pass http://api/;
+##      proxy_redirect off;
+##      proxy_set_header Host api.malcolm.local;
+##    }
 
     # Arkime
     location / {
-      proxy_pass https://arkime;
-      proxy_ssl_verify off;
-      proxy_redirect off;
-      proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $authenticated_user;
-      proxy_set_header Authorization "";
+        default_type text/plain;
+        return 418 "418 I'm a teapot\n";
+##      proxy_pass https://arkime;
+##      proxy_ssl_verify off;
+##      proxy_redirect off;
+##      proxy_set_header Host arkime.malcolm.local;
+##      proxy_set_header http_auth_http_user $authenticated_user;
+##      proxy_set_header Authorization "";
     }
   }
 
   # OpenSearch dashboards interface
-  server {
-    listen 5601;
-    include /etc/nginx/nginx_ssl_config.conf;
-
-    # use either auth_basic or auth_ldap
-    include /etc/nginx/nginx_auth_rt.conf;
-
-    # favicon, logos, banners, etc.
-    include /etc/nginx/nginx_image_aliases.conf;
-
-    # Dashboards -> Arkime shortcut
-    location ~* /iddash2ark/(.*) {
-      rewrite ^.*/iddash2ark/(.*) /sessions?expression=($1) redirect;
-      proxy_pass https://arkime;
-      proxy_ssl_verify off;
-      proxy_redirect off;
-      proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $authenticated_user;
-      proxy_set_header Authorization "";
-    }
-
-    # Dashboards -> extracted file download
-    location ~* /dl-extracted-files/(.*) {
-      rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
-      proxy_pass http://extracted-file-http-server;
-      proxy_redirect off;
-      proxy_set_header Host file-monitor.malcolm.local;
-    }
-
-    # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
-    location /dashboards {
-      proxy_pass http://dashboards;
-      proxy_redirect off;
-      proxy_set_header Host dashboards.malcolm.local;
-    }
-
-    # otherwise prepend /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
-    location / {
-      rewrite ^/(.*) /dashboards/$1;
-      proxy_pass http://dashboards;
-      proxy_redirect off;
-      proxy_set_header Host dashboards.malcolm.local;
-    }
-  }
+##  server {
+##    listen 5601;
+##    include /etc/nginx/nginx_ssl_config.conf;
+##
+##    # use either auth_basic or auth_ldap
+##    include /etc/nginx/nginx_auth_rt.conf;
+##
+##    # favicon, logos, banners, etc.
+##    include /etc/nginx/nginx_image_aliases.conf;
+##
+##    # Dashboards -> Arkime shortcut
+##    location ~* /iddash2ark/(.*) {
+##      rewrite ^.*/iddash2ark/(.*) /sessions?expression=($1) redirect;
+##      proxy_pass https://arkime;
+##      proxy_ssl_verify off;
+##      proxy_redirect off;
+##      proxy_set_header Host arkime.malcolm.local;
+##      proxy_set_header http_auth_http_user $authenticated_user;
+##      proxy_set_header Authorization "";
+##    }
+##
+##    # Dashboards -> extracted file download
+##    location ~* /dl-extracted-files/(.*) {
+##      rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
+##      proxy_pass http://extracted-file-http-server;
+##      proxy_redirect off;
+##      proxy_set_header Host file-monitor.malcolm.local;
+##    }
+##
+##    # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
+##    location /dashboards {
+##      proxy_pass http://dashboards;
+##      proxy_redirect off;
+##      proxy_set_header Host dashboards.malcolm.local;
+##    }
+##
+##    # otherwise prepend /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
+##    location / {
+##      rewrite ^/(.*) /dashboards/$1;
+##      proxy_pass http://dashboards;
+##      proxy_redirect off;
+##      proxy_set_header Host dashboards.malcolm.local;
+##    }
+##  }
 
   # OpenSearch API
-  server {
-    listen 9200;
-    include /etc/nginx/nginx_ssl_config.conf;
-
-    # use either auth_basic or auth_ldap
-    include /etc/nginx/nginx_auth_rt.conf;
-
-    # favicon, logos, banners, etc.
-    include /etc/nginx/nginx_image_aliases.conf;
-
-    location / {
-      proxy_pass http://opensearch;
-      proxy_redirect off;
-      proxy_set_header Host os.malcolm.local;
-      client_max_body_size 50m;
-    }
-  }
+##  server {
+##    listen 9200;
+##    include /etc/nginx/nginx_ssl_config.conf;
+##
+##    # use either auth_basic or auth_ldap
+##    include /etc/nginx/nginx_auth_rt.conf;
+##
+##    # favicon, logos, banners, etc.
+##    include /etc/nginx/nginx_image_aliases.conf;
+##
+##    location / {
+##      proxy_pass http://opensearch;
+##      proxy_redirect off;
+##      proxy_set_header Host os.malcolm.local;
+##      client_max_body_size 50m;
+##    }
+##  }
 
 }
