--- a/.github/workflows/name-map-ui-build-and-push-ghcr.yml
+++ b/.github/workflows/name-map-ui-build-and-push-ghcr.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - development
+      - kubernetes
     paths:
       - 'name-map-ui/**'
       - 'Dockerfiles/name-map-ui.Dockerfile'
