reference correct github image

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -359,7 +359,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   opensearch:
-    image: malcolmnetsec/opensearch:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/opensearch:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -400,7 +400,7 @@ services:
       retries: 3
       start_period: 180s
   dashboards-helper:
-    image: malcolmnetsec/dashboards-helper:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/dashboards-helper:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -431,7 +431,7 @@ services:
       retries: 3
       start_period: 30s
   dashboards:
-    image: malcolmnetsec/dashboards:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/dashboards:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -456,7 +456,7 @@ services:
       retries: 3
       start_period: 210s
   logstash:
-    image: malcolmnetsec/logstash-oss:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/logstash-oss:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -499,7 +499,7 @@ services:
       retries: 3
       start_period: 600s
   filebeat:
-    image: malcolmnetsec/filebeat-oss:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/filebeat-oss:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -538,7 +538,7 @@ services:
       retries: 3
       start_period: 60s
   arkime:
-    image: malcolmnetsec/arkime:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/arkime:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -576,7 +576,7 @@ services:
       retries: 3
       start_period: 210s
   zeek:
-    image: malcolmnetsec/zeek:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/zeek:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -615,7 +615,7 @@ services:
       retries: 3
       start_period: 60s
   zeek-live:
-    image: malcolmnetsec/zeek:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/zeek:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -647,7 +647,7 @@ services:
       - ./zeek-logs/extract_files:/zeek/extract_files
       - ./zeek/intel:/opt/zeek/share/zeek/site/intel
   suricata:
-    image: malcolmnetsec/suricata:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/suricata:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -684,7 +684,7 @@ services:
       retries: 3
       start_period: 120s
   suricata-live:
-    image: malcolmnetsec/suricata:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/suricata:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -711,7 +711,7 @@ services:
       - ./suricata-logs:/var/log/suricata
       - ./suricata/rules:/opt/suricata/rules:ro
   file-monitor:
-    image: malcolmnetsec/file-monitor:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/file-monitor:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -735,7 +735,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/pcap-capture:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -757,7 +757,7 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./pcap/upload:/pcap
   pcap-monitor:
-    image: malcolmnetsec/pcap-monitor:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/pcap-monitor:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -783,7 +783,7 @@ services:
       retries: 3
       start_period: 90s
   upload:
-    image: malcolmnetsec/file-upload:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/file-upload:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -811,7 +811,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/htadmin:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -835,7 +835,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/freq:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -856,7 +856,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/name-map-ui:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -877,7 +877,7 @@ services:
       retries: 3
       start_period: 60s
   netbox:
-    image: malcolmnetsec/netbox:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/netbox:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -908,7 +908,7 @@ services:
       retries: 3
       start_period: 120s
   netbox-postgres:
-    image: malcolmnetsec/postgresql:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/postgresql:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -931,7 +931,7 @@ services:
       retries: 3
       start_period: 45s
   netbox-redis:
-    image: malcolmnetsec/redis:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/redis:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -958,7 +958,7 @@ services:
       retries: 3
       start_period: 45s
   netbox-redis-cache:
-    image: malcolmnetsec/redis:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/redis:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -984,7 +984,7 @@ services:
       retries: 3
       start_period: 45s
   api:
-    image: malcolmnetsec/api:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/api:kubernetes
     command: gunicorn --bind 0:5000 manage:app
     restart: "no"
     stdin_open: false
@@ -1007,7 +1007,7 @@ services:
       retries: 3
       start_period: 60s
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/nginx-proxy:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
