--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -362,7 +362,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/opensearch.Dockerfile
-    image: malcolmnetsec/opensearch:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/opensearch:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -406,7 +406,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards-helper.Dockerfile
-    image: malcolmnetsec/dashboards-helper:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/dashboards-helper:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -440,7 +440,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards.Dockerfile
-    image: malcolmnetsec/dashboards:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/dashboards:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -468,7 +468,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: malcolmnetsec/logstash-oss:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/logstash-oss:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -518,7 +518,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: malcolmnetsec/filebeat-oss:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/filebeat-oss:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -560,7 +560,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/arkime.Dockerfile
-    image: malcolmnetsec/arkime:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/arkime:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -604,7 +604,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: malcolmnetsec/zeek:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/zeek:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -647,7 +647,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: malcolmnetsec/zeek:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/zeek:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -683,7 +683,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/suricata.Dockerfile
-    image: malcolmnetsec/suricata:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/suricata:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -723,7 +723,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/suricata.Dockerfile
-    image: malcolmnetsec/suricata:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/suricata:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -753,7 +753,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: malcolmnetsec/file-monitor:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/file-monitor:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -780,7 +780,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: malcolmnetsec/pcap-capture:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/pcap-capture:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -805,7 +805,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-monitor.Dockerfile
-    image: malcolmnetsec/pcap-monitor:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/pcap-monitor:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -834,7 +834,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: malcolmnetsec/file-upload:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/file-upload:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
@@ -862,7 +862,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/htadmin:kubernetes
     build:
       context: .
       dockerfile: Dockerfiles/htadmin.Dockerfile
@@ -889,7 +889,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/freq:kubernetes
     build:
       context: .
       dockerfile: Dockerfiles/freq.Dockerfile
@@ -913,7 +913,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/name-map-ui:kubernetes
     build:
       context: .
       dockerfile: Dockerfiles/name-map-ui.Dockerfile
@@ -937,7 +937,7 @@ services:
       retries: 3
       start_period: 60s
   netbox:
-    image: malcolmnetsec/netbox:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/netbox:kubernetes
     build:
       context: .
       dockerfile: Dockerfiles/netbox.Dockerfile
@@ -972,7 +972,7 @@ services:
       retries: 3
       start_period: 120s
   netbox-postgres:
-    image: malcolmnetsec/postgresql:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/postgresql:kubernetes
     build:
       context: .
       dockerfile: Dockerfiles/postgresql.Dockerfile
@@ -998,7 +998,7 @@ services:
       retries: 3
       start_period: 45s
   netbox-redis:
-    image: malcolmnetsec/redis:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/redis:kubernetes
     build:
       context: .
       dockerfile: Dockerfiles/redis.Dockerfile
@@ -1028,7 +1028,7 @@ services:
       retries: 3
       start_period: 45s
   netbox-redis-cache:
-    image: malcolmnetsec/redis:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/redis:kubernetes
     build:
       context: .
       dockerfile: Dockerfiles/redis.Dockerfile
@@ -1057,7 +1057,7 @@ services:
       retries: 3
       start_period: 45s
   api:
-    image: malcolmnetsec/api:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/api:kubernetes
     build:
       context: .
       dockerfile: Dockerfiles/api.Dockerfile
@@ -1086,7 +1086,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: malcolmnetsec/nginx-proxy:kubernetes
+    image: ghcr.io/idaholab/malcolmnetsec/nginx-proxy:kubernetes
     restart: "no"
     stdin_open: false
     tty: true
