--- a/kubernetes/01-malcolm.yml
+++ b/kubernetes/01-malcolm.yml
@@ -2,25 +2,24 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx-ingress
-  namespace: malcolm
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/backend-protocol: "https"
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/backend-protocol: https
     nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
     nginx.ingress.kubernetes.io/ssl-passthrough: "false"
+  name: nginx-ingress
+  namespace: malcolm
 spec:
   rules:
   - http:
       paths:
-      - path: /
-        pathType: Prefix
-        backend:
+      - backend:
           service:
             name: nginx-proxy
             port:
               number: 443
-
+        path: /
+        pathType: Prefix
 ---
 apiVersion: v1
 kind: Service
@@ -29,11 +28,21 @@ metadata:
   namespace: malcolm
 spec:
   ports:
-    - port: 443
-      protocol: TCP
+  - port: 443
   selector:
     app: malcolm-app
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: freq
+  namespace: malcolm
+spec:
+  ports:
+  - port: 10004
+  selector:
+    app: malcolm-app
+    name: freq-container
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -41,44 +50,63 @@ metadata:
   name: malcolm-app
   namespace: malcolm
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: malcolm-app
-  replicas: 1
   template:
     metadata:
       labels:
         app: malcolm-app
     spec:
       containers:
-      - name: nginx-proxy-container
-        image: malcolmnetsec/nginx-proxy:23.05.0
+      - env:
+        - name: PUID
+          value: "1000"
+        - name: PGID
+          value: "1000"
+        - name: PUSER_CA_TRUST
+          value: /var/local/ca-trust
+        - name: VIRTUAL_HOST
+          value: freq.malcolm.local
+        - name: FREQ_LOOKUP
+          value: "true"
+        - name: FREQ_SEVERITY_THRESHOLD
+          value: "2.0"
+        - name: TOTAL_MEGABYTES_SEVERITY_THRESHOLD
+          value: "1000"
+        - name: CONNECTION_SECONDS_SEVERITY_THRESHOLD
+          value: "3600"
+        - name: SENSITIVE_COUNTRY_CODES
+          value: AM,AZ,BY,CN,CU,DZ,GE,HK,IL,IN,IQ,IR,KG,KP,KZ,LY,MD,MO,PK,RU,SD,SS,SY,TJ,TM,TW,UA,UZ
+        image: ghcr.io/idaholab/malcolmnetsec/freq:kubernetes
         imagePullPolicy: Always
+        name: freq-container
         ports:
-          - containerPort: 443
-        env:
-          - name: PUID
-            value: '1000'
-          - name: PGID
-            value: '1000'
-          - name: PUSER_CA_TRUST
-            value: '/var/local/ca-trust'
-          - name: NGINX_BASIC_AUTH
-            value: 'true'
-          - name: NGINX_LDAP_TLS_STUNNEL
-            value: 'false'
-          - name: NGINX_LDAP_TLS_STUNNEL_CHECK_HOST
-            value: ''
-          - name: NGINX_LDAP_TLS_STUNNEL_CHECK_IP
-            value: ''
-          - name: NGINX_LDAP_TLS_STUNNEL_VERIFY_LEVEL
-            value: '2'
-          - name: NGINX_SSL
-            value: 'true'
-          - name: NGINX_LOG_ACCESS_AND_ERRORS
-            value: 'false'
-          - name: CONFIG_MAP_DIR
-            value: 'configmap'
+        - containerPort: 10004
+      - env:
+        - name: PUID
+          value: "1000"
+        - name: PGID
+          value: "1000"
+        - name: PUSER_CA_TRUST
+          value: /var/local/ca-trust
+        - name: NGINX_BASIC_AUTH
+          value: "true"
+        - name: NGINX_LDAP_TLS_STUNNEL
+          value: "false"
+        - name: NGINX_LDAP_TLS_STUNNEL_CHECK_HOST
+        - name: NGINX_LDAP_TLS_STUNNEL_CHECK_IP
+        - name: NGINX_LDAP_TLS_STUNNEL_VERIFY_LEVEL
+          value: "2"
+        - name: NGINX_SSL
+          value: "true"
+        - name: NGINX_LOG_ACCESS_AND_ERRORS
+          value: "false"
+        - name: CONFIG_MAP_DIR
+          value: configmap
+        image: malcolmnetsec/nginx-proxy:kubernetes
+        imagePullPolicy: Always
         livenessProbe:
           exec:
             command:
@@ -86,30 +114,33 @@ spec:
             - --insecure
             - --silent
             - https://localhost:443
+          failureThreshold: 10
           initialDelaySeconds: 120
           periodSeconds: 30
-          timeoutSeconds: 15
           successThreshold: 1
-          failureThreshold: 10
+          timeoutSeconds: 15
+        name: nginx-proxy-container
+        ports:
+        - containerPort: 443
         volumeMounts:
-        - name: etc-nginx-volume
-          mountPath: /etc/nginx/configmap
-        - name: var-local-catrust-volume
-          mountPath: /var/local/ca-trust/configmap
-        - name: etc-nginx-certs-volume
-          mountPath: /etc/nginx/certs/configmap
-        - name: etc-nginx-certs-pem-volume
-          mountPath: /etc/nginx/dhparam/configmap
+        - mountPath: /etc/nginx/configmap
+          name: etc-nginx-volume
+        - mountPath: /var/local/ca-trust/configmap
+          name: var-local-catrust-volume
+        - mountPath: /etc/nginx/certs/configmap
+          name: etc-nginx-certs-volume
+        - mountPath: /etc/nginx/dhparam/configmap
+          name: etc-nginx-certs-pem-volume
       volumes:
-      - name: etc-nginx-volume
-        configMap:
+      - configMap:
           name: etc-nginx
-      - name: var-local-catrust-volume
-        configMap:
+        name: etc-nginx-volume
+      - configMap:
           name: var-local-catrust
-      - name: etc-nginx-certs-volume
-        configMap:
+        name: var-local-catrust-volume
+      - configMap:
           name: etc-nginx-certs
-      - name: etc-nginx-certs-pem-volume
-        configMap:
+        name: etc-nginx-certs-volume
+      - configMap:
           name: etc-nginx-certs-pem
+        name: etc-nginx-certs-pem-volume
