restore development branch links

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ remote_theme: pages-themes/minimal@v0.2.0
 external_download_url: https://malcolm.fyi/docs/download.html
 youtube_url: https://www.youtube.com/@MalcolmNetworkTrafficAnalysis
 mastodon:
-  id:
-  url:
+  id: malcolm@malcolm.fyi
+  url: https://infosec.exchange/@mmguero
 docs_uri: docs/
 alerting_docs_uri: docs/alerting.html
 anomaly_detection_docs_uri: docs/anomaly-detection.html
