--- a/.github/workflows/nginx-build-and-push-ghcr.yml
+++ b/.github/workflows/nginx-build-and-push-ghcr.yml
@@ -74,4 +74,4 @@ jobs:
             VCS_REVISION=${{ steps.extract_commit_sha.outputs.sha }}
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/malcolmnetsec/nginx-proxy:${{ steps.extract_branch.outputs.branch }}
+          tags: ghcr.io/${{ github.repository_owner }}/malcolm/nginx-proxy:${{ steps.extract_branch.outputs.branch }}
