work in progress with services

--- a/kubernetes/02-opensearch.yml
+++ b/kubernetes/02-opensearch.yml
@@ -45,3 +45,5 @@ spec:
         env:
           - name: OPENSEARCH_DISABLED
             value: "true"
+          - name: VIRTUAL_HOST
+            value: "os.malcolm.local"
