--- a/kubernetes/03-dashboards.yml
+++ b/kubernetes/03-dashboards.yml
@@ -45,3 +45,5 @@ spec:
         env:
           - name: DASHBOARDS_DISABLED
             value: "true"
+          - name: VIRTUAL_HOST
+            value: "dashboards.malcolm.local"
