--- a/kubernetes/08-dashboards-helper.yml
+++ b/kubernetes/08-dashboards-helper.yml
@@ -47,3 +47,5 @@ spec:
         env:
           - name: DASHBOARDS_HELPER_DISABLED
             value: "true"
+          - name: VIRTUAL_HOST
+            value: "dashboards-helper.malcolm.local"
