--- a/kubernetes/14-name-map-ui.yml
+++ b/kubernetes/14-name-map-ui.yml
@@ -43,3 +43,5 @@ spec:
         env:
           - name: NAME_MAP_UI_DISABLED
             value: "true"
+          - name: VIRTUAL_HOST
+            value: "name-map-ui.malcolm.local"
