--- a/kubernetes/15-netbox-redis.yml
+++ b/kubernetes/15-netbox-redis.yml
@@ -45,3 +45,5 @@ spec:
         env:
           - name: NETBOX_REDIS_DISABLED
             value: "true"
+          - name: VIRTUAL_HOST
+            value: "netbox-redis.malcolm.local"
