--- a/kubernetes/17-netbox-postgres.yml
+++ b/kubernetes/17-netbox-postgres.yml
@@ -45,3 +45,5 @@ spec:
         env:
           - name: NETBOX_POSTGRES_DISABLED
             value: "true"
+          - name: VIRTUAL_HOST
+            value: "netbox-postgres.malcolm.local"
