--- a/kubernetes/19-htadmin.yml
+++ b/kubernetes/19-htadmin.yml
@@ -45,3 +45,5 @@ spec:
         env:
           - name: HTADMIN_DISABLED
             value: "true"
+          - name: VIRTUAL_HOST
+            value: "htadmin.malcolm.local"
