work in progress

--- a/kubernetes/21-zeek-live.yml
+++ b/kubernetes/21-zeek-live.yml
@@ -34,5 +34,5 @@ spec:
           - configMapRef:
               name: pcap-capture-env
         env:
-          - name: ZEEK_LIVE_DISABLED
+          - name: ZEEK_DISABLED
             value: "true"
