--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -99,7 +99,7 @@ http {
     location /upload {
       proxy_http_version 1.1;
       proxy_set_header Connection "";
-      proxy_pass http://upload/;
+      proxy_pass http://upload;
       proxy_redirect off;
       proxy_set_header Host upload.malcolm.local;
       proxy_request_buffering off;
@@ -109,7 +109,7 @@ http {
     location /server/php {
       proxy_http_version 1.1;
       proxy_set_header Connection "";
-      proxy_pass http://upload/server/php/;
+      proxy_pass http://upload/server/php;
       proxy_redirect off;
       proxy_set_header Host upload.malcolm.local;
       proxy_request_buffering off;
@@ -224,7 +224,7 @@ http {
 
     # Malcolm API
     location /mapi {
-      proxy_pass http://api/;
+      proxy_pass http://api;
       proxy_redirect off;
       proxy_set_header Host api.malcolm.local;
     }
