--- a/nginx/nginx_readonly.conf
+++ b/nginx/nginx_readonly.conf
@@ -168,7 +168,7 @@ http {
 
     # Malcolm API
     location /mapi {
-      proxy_pass http://api/;
+      proxy_pass http://api;
       proxy_redirect off;
       proxy_set_header Host api.malcolm.local;
     }
