getting upload to work

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -99,6 +99,7 @@ http {
     location /upload {
       proxy_http_version 1.1;
       proxy_set_header Connection "";
+      rewrite ^/upload(.*)/?$ /$1 break;
       proxy_pass http://upload;
       proxy_redirect off;
       proxy_set_header Host upload.malcolm.local;
